Added smaller images and made social media links larger

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="row">
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img class="custom-project-image" src="images/project-chicago.png"/>
+                    <img class="custom-project-image" src="images/project-chicago@0.5x.png"/>
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
@@ -168,7 +168,7 @@
 
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img class="custom-project-image" src="images/project-business-signs.png"/>
+                    <img class="custom-project-image" src="images/project-business-signs@0.5x.png"/>
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
@@ -184,7 +184,7 @@
 
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img class="custom-project-image" src="images/project-drone.png"/>
+                    <img class="custom-project-image" src="images/project-drone@0.5x.png"/>
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
@@ -200,7 +200,7 @@
 
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img class="custom-project-image" src="images/project-pi-power.png"/>
+                    <img class="custom-project-image" src="images/project-pi-power@0.5x.png"/>
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
@@ -223,7 +223,7 @@
 
             <div class="project shadow-large">
                 <div class="project-image">
-                    <img class="custom-project-image" src="images/project-word-clock.png"/>
+                    <img class="custom-project-image" src="images/project-word-clock@0.5x.png"/>
                 </div>
                 <!-- End .project-image -->
                 <div class="project-info">
@@ -301,23 +301,23 @@
             <div class="col-sm-5 social">
                 <ul>
                     <li>
-                        <a href="https://github.com/jfarago" target="_blank"><i class="fa fa-github"
+                        <a href="https://github.com/jfarago" target="_blank"><i class="fa fa-lg fa-github"
                                                                                 aria-hidden="true"></i></a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/jared-farago-11a09354/" target="_blank"><i
-                                class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/jared.farago" target="_blank"><i class="fa fa-facebook"
+                        <a href="https://www.facebook.com/jared.farago" target="_blank"><i class="fa fa-lg fa-facebook"
                                                                                            aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/j_farago" target="_blank"><i class="fa fa-twitter"
+                        <a href="https://twitter.com/j_farago" target="_blank"><i class="fa fa-lg fa-twitter"
                                                                                   aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/jaredfarago/" target="_blank"><i class="fa fa-instagram"
+                        <a href="https://www.instagram.com/jaredfarago/" target="_blank"><i class="fa fa-lg fa-instagram"
                                                                                             aria-hidden="true"></i></a>
                     </li>
                 </ul>
