--- a/index.html
+++ b/index.html
@@ -42,7 +42,31 @@
         <li>
             <a href="#contact">Contact</a>
         </li>
+
+        <li>|</li>
+
+        <li>
+            <a class="no-scroll" href="https://github.com/jfarago" target="_blank"><i class="fa fa-lg fa-github"
+                                                                    aria-hidden="true"></i></a>
+        </li>
+        <li>
+            <a class="no-scroll" href="https://www.linkedin.com/in/jared-farago-11a09354/" target="_blank"><i
+                    class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
+        </li>
+        <li>
+            <a class="no-scroll" href="https://www.facebook.com/jared.farago" target="_blank"><i class="fa fa-lg fa-facebook"
+                                                                               aria-hidden="true"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/j_farago" target="_blank"><i class="fa fa-lg fa-twitter"
+                                                                      aria-hidden="true"></i></a>
+        </li>
+        <li>
+            <a class="no-scroll" href="https://www.instagram.com/jaredfarago/" target="_blank"><i class="fa fa-lg fa-instagram"
+                                                                                aria-hidden="true"></i></a>
+        </li>
     </ul>
+
 </header>
 <!-- End header -->
 
@@ -288,17 +312,18 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-sm-5 copyright">
-                <p>
-                    Copyright &copy; 2019 Web Veteran LLC
-                </p>
-            </div>
-            <div class="col-sm-2 top">
+
+            <div class="col-sm-12 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
             </div>
-            <div class="col-sm-5 social">
+            <div class="col-sm-12 copyright">
+                <p>
+                    Copyright &copy; 2019 Web Veteran LLC
+                </p>
+            </div>
+            <!--<div class="col-sm-5 social">
                 <ul>
                     <li>
                         <a href="https://github.com/jfarago" target="_blank"><i class="fa fa-lg fa-github"
@@ -321,7 +346,7 @@
                                                                                             aria-hidden="true"></i></a>
                     </li>
                 </ul>
-            </div>
+            </div>-->
         </div>
     </div>
 </footer>
