Updated social media links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     class="fa fa-lg fa-linkedin" aria-hidden="true"></i></a>
         </li>
         <li>
-            <a class="no-scroll" href="https://www.facebook.com/jared.farago" target="_blank"><i class="fa fa-lg fa-facebook"
+            <a class="no-scroll" href="https://www.facebook.com/Web-Veteran-324369801515053/" target="_blank"><i class="fa fa-lg fa-facebook"
                                                                                aria-hidden="true"></i></a>
         </li>
         <li>
@@ -62,7 +62,7 @@
                                                                       aria-hidden="true"></i></a>
         </li>
         <li>
-            <a class="no-scroll" href="https://www.instagram.com/jaredfarago/" target="_blank"><i class="fa fa-lg fa-instagram"
+            <a class="no-scroll" href="https://www.instagram.com/webveteran/" target="_blank"><i class="fa fa-lg fa-instagram"
                                                                                 aria-hidden="true"></i></a>
         </li>
     </ul>
