Added link to store

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <a href="#contact">Contact</a>
         </li>
 
+        <li>
+            <a href="https://store.webveteran.org/collections/all" target="_blank">Store</a>
+        </li>
+
         <li>|</li>
 
         <li>
