updated link to open in the same window

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
 
         <li>
-            <a href="https://store.webveteran.org/collections/all" target="_blank">Store</a>
+            <a class="no-scroll" href="https://store.webveteran.org/collections/all">Store</a>
         </li>
 
         <li>|</li>
